--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html(lang="en")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js")
         script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js")
     body
-        nav(class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top")
+        nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
             a(class="navbar-brand" href="/") SimpleFood
             button(class="navbar-toggler", type="button", data-toggle="collapse" data-target="#navBarCollapse")
                 span(class="navbar-toggler-icon")
@@ -17,12 +17,12 @@ html(lang="en")
                     mixin navLink(href, name)
                         li(class="nav-item active")
                             a(class="nav-link", href=href)= name
-                    
+
                     +navLink('/', 'Home')
                     +navLink('/summary', 'Summary')
                     +navLink('/setting', 'Setting')
         .container-fluid
             block content
-        
+
         block script
 
